--- a/Mastermind/MainWindow.xaml
+++ b/Mastermind/MainWindow.xaml
@@ -75,9 +75,11 @@
                Grid.Row="0" Grid.Column="3" Grid.RowSpan="2"/>
         <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Height="50" Width="250" Content="Controleer code"
                 Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Click="Button_Click"/>
-        <TextBox x:Name="correctCodeTextBox" Height="20" VerticalAlignment="Bottom"
+        <TextBox x:Name="correctCodeTextBox" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left"
                  Grid.Row="2" Grid.Column="0" IsEnabled="False" Visibility="Hidden"/>
-        <TextBox x:Name="timerTextBox" Height="20" VerticalAlignment="Bottom" Width="50" HorizontalAlignment="Left"
+        <TextBox x:Name="scoreTextBox" Height="20" Width="50" VerticalAlignment="Bottom" Text="100" HorizontalAlignment="Left" Margin="5,0,0,0"
+                 Grid.Row="2" Grid.Column="3"/>
+        <TextBox x:Name="timerTextBox" Height="20" VerticalAlignment="Top" Width="50" HorizontalAlignment="Left" Margin="5,0,0,0"
                  Grid.Row="2" Grid.Column="3"/>
     </Grid>
 </Window>
