--- a/Mastermind/MainWindow.xaml
+++ b/Mastermind/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mastermind"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" KeyDown="Mastermind_KeyDown">
+        Title="MainWindow" Height="450" Width="800" KeyDown="Mastermind_KeyDown" Closing="Mastermind_Closing">
     <Grid x:Name="mastermindGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
