--- a/MastermindNewLayout/MainWindow.xaml
+++ b/MastermindNewLayout/MainWindow.xaml
@@ -80,6 +80,19 @@
         <TextBox x:Name="timerTextBox" Width="150" IsEnabled="False" Text="Seconden" TextAlignment="Center" FontSize="26" FontStyle="Italic"
             Grid.Column="1" Grid.Row="1" Foreground="White" Background="Black"/>
         <TextBox x:Name="correctCodeTextBox" Visibility="Hidden" IsEnabled="False" TextAlignment="Center"
-            Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="4"/> 
+            Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="4"/>
+        <Menu x:Name="GameMenu"
+              Grid.Row="11" >
+            <MenuItem x:Name="fileMenu" Header="Bestand">
+                <MenuItem x:Name="newGameMenu" Header="Nieuw spel" Click="newGameMenu_Click"/>
+                <MenuItem x:Name="highScoreMenu" Header="Highscores" Click="highScoreMenu_Click"/>
+                <MenuItem x:Name="closeMenu" Header="Afsluiten" Click="closeMenu_Click"/>
+            </MenuItem>
+            <MenuItem x:Name="settingsMenu" Header="Instellingen">
+                <MenuItem x:Name="attemptsAmountmenu" Header="Aantal pogingen" Click="attemptsAmountMenu_Click">
+                    <Slider x:Name="maxAttemptSlider" TickPlacement="BottomRight" TickFrequency="1" Minimum="3" Maximum="20" Width="100" AutoToolTipPlacement="TopLeft"/>
+                </MenuItem>
+            </MenuItem>
+        </Menu>
     </Grid>
 </Window>
